objects/FCO_Lines__c.object
<CustomObject>
    <label>FCO Line</label>
    <nameField>
        <displayFormat>FCOLine-{0000}</displayFormat>
        <label>FCO Lines Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FCO Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>FCO__c</fullName>
        <label>FCO</label>
        <referenceTo>FCO__c</referenceTo>
        <relationshipLabel>FCO Lines</relationshipLabel>
        <relationshipName>FCO_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RMA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RMA</label>
        <referenceTo>SVMXC__RMA_Shipment_Order__c</referenceTo>
        <relationshipLabel>FCO Lines</relationshipLabel>
        <relationshipName>FCO_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <formula>Location__r.SVMXC__Zip__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>Location__r.SVMXC__City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <formula>Case(Contact_Role__r.Role__c, &quot;TBD&quot;,&quot;TBD&quot;,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>Location__r.SVMXC__State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Removed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <formula>Location__r.SVMXC__Street__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>FCO Lines</relationshipLabel>
        <relationshipName>FCO_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>FCO Lines</relationshipLabel>
        <relationshipName>FCO_Line1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>TEXT(Location__r.SVMXC__Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCO_Type__c</fullName>
        <formula>CASE( FCO__r.FCO_Type__c,
&quot;Important Field Safety Notice&quot;,&quot;Important Field Safety Notice&quot;,
&quot;Important Field Safety Modification&quot;,&quot;Important Field Safety Modification&quot;,
&quot;Important User Notice&quot;,&quot;Important User Notice&quot;,
&quot;Important Product Modification&quot;,&quot;Important Product Modification&quot;,
&quot;Product Bulletin&quot;,&quot;Product Bulletin&quot;,
&quot;Product Modification&quot;,&quot;Product Modification&quot;,
&quot;Product Recommendation&quot;,&quot;Product Recommendation&quot;,
&quot;Internal Information Exchange&quot;,&quot;Internal Information Exchange&quot;,
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FCO Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipLabel>FCO Lines</relationshipLabel>
        <relationshipName>FCO_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>SVMXC__Service_Order__c</referenceTo>
        <relationshipLabel>FCO Lines</relationshipLabel>
        <relationshipName>FCO_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RMA_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RMA Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SibexFCO_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SibexFCO Id</label>
        <referenceTo>FCO__c</referenceTo>
        <relationshipLabel>FCOLines</relationshipLabel>
        <relationshipName>FCOLines3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Role</label>
        <referenceTo>Contact_Role__c</referenceTo>
        <relationshipLabel>FCO Lines</relationshipLabel>
        <relationshipName>FCO_Line2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <formula>Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manual_Closure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Closure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FCO_English_URL__c</fullName>
        <formula>FCO__r.English_FCO_URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FCO English URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCO_Line_Status__c</fullName>
        <label>FCO Line Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Distributed</fullName>
                </value>
                <value>
                    <fullName>Distributed Parts</fullName>
                </value>
                <value>
                    <fullName>Identified</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMX_PS_Priority__c</fullName>
        <description>Denotes the priority of FCO Lines</description>
        <inlineHelpText>Denotes the priority of FCO Lines</inlineHelpText>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Notified__c</fullName>
        <label>Customer Notified</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notification_Date__c</fullName>
        <label>Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Role_Email__c</fullName>
        <label>Contact Role Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Parts_MovexOrderNo__c</fullName>
        <label>Parts MovexOrderNo</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_FCO_Reason__c</fullName>
        <description>Denotes the reason for the FCO</description>
        <inlineHelpText>Denotes the reason for the FCO</inlineHelpText>
        <label>FCO Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Production Error</fullName>
                </value>
                <value>
                    <fullName>Product out of date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Order_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Work Order Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Compliance_End_Date__c</fullName>
        <label>Compliance End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Installed_Product_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Installed Product 1</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipLabel>FCO Lines</relationshipLabel>
        <relationshipName>FCO_Line3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Installed_Product_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Installed Product 2</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipLabel>FCO Lines</relationshipLabel>
        <relationshipName>FCO_Line4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Installed_Product_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Installed Product 3</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipLabel>FCO Lines</relationshipLabel>
        <relationshipName>FCO_Line5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manual_Closure_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manual Closure User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FCO_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Unit_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Unit Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>FCO Lines</relationshipLabel>
        <relationshipName>FCO_Line7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Compliance_Start_Date__c</fullName>
        <label>Compliance Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Unit_Notified__c</fullName>
        <label>Business Unit Notified</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Date_Notified__c</fullName>
        <label>Customer Date Notified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SibexBusinessUnitFCO_Id__c</fullName>
        <label>SibexBusinessUnitFCO Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SibexEmployerProduct_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SibexEmployerProduct Id</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipLabel>FCOLines</relationshipLabel>
        <relationshipName>FCOLines2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Installed_Product_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Installed Product Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Notification_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Notification Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Customer_Notification__c</fullName>
        <label>Send Customer Notification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SibexEmployerProductFCO_Id__c</fullName>
        <externalId>true</externalId>
        <label>SibexEmployerProductFCO Id</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit_Contact_Email__c</fullName>
        <label>Business Unit Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Automated_Closure_of_FCO_Line__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Automated Closure of FCO Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description_of_Manual_Closure__c</fullName>
        <label>Description of Manual Closure</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business_Unit_Notification_Date__c</fullName>
        <label>Business Unit Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Send_Business_Unit_Notification__c</fullName>
        <label>Send Business Unit Notification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>